--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,6 @@ steps:
     gradleOptions: '-Xmx3072m'
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.11'
     tasks: 'assembleDebug'
