Update azure-pipelines.yml for Azure Pipelines
test plan

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,4 @@ steps:
     testResultsFiles: '**/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.11'
-    tasks: 'assembleDebug'
+    tasks: 'test'
