--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,15 +8,31 @@ trigger:
 
 pool:
   vmImage: 'macos-latest'
-
-steps:
-- task: Gradle@2
-  inputs:
-    workingDirectory: ''
-    gradleWrapperFile: 'gradlew'
-    gradleOptions: '-Xmx3072m'
-    publishJUnitResults: false
-    testResultsFiles: '**/TEST-*.xml'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    tasks: 'test'
+stages:
+- stage: "Build-ContineousIntegration"
+  jobs:
+  - job: LintAnalysis
+    steps:
+    - task: Gradle@2
+      inputs:
+        gradleWrapperFile: 'gradlew'
+        #gradleOptions: '-Xmx3072m'
+        publishJUnitResults: false
+        #testResultsFiles: '**/TEST-*.xml'
+        javaHomeOption: 'JDKVersion'
+        jdkVersionOption: '1.11'
+        tasks: 'lint'
+        sonarQubeRunAnalysis: false
+  - job: BuildJob
+    steps:
+    - task: Gradle@2
+      inputs:
+        workingDirectory: ''
+        gradleWrapperFile: 'gradlew'
+        gradleOptions: '-Xmx3072m'
+        publishJUnitResults: true
+        testResultsFiles: '**/TEST-*.xml'
+        javaHomeOption: 'JDKVersion'
+        jdkVersionOption: '1.11'
+        tasks: 'test'
+  
