Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 pool:
   vmImage: 'macos-latest'
 stages:
-- stage: "Build-ContineousIntegration"
+- stage: "ContineousIntegration"
   jobs:
   - job: LintAnalysis
     steps:
