--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,21 +31,21 @@ stages:
   #       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
   #       ArtifactName: 'drop'
   #       publishLocation: Container
-  - job: UnitTests
-    #dependsOn: LintAnalysis
-    steps:
-    - task: Gradle@2
-      inputs:
-        workingDirectory: ''
-        gradleWrapperFile: 'gradlew'
-        gradleOptions: '-Xmx3072m'
-        publishJUnitResults: true
-        testResultsFiles: '**/TEST-*.xml'
-        javaHomeOption: 'JDKVersion'
-        jdkVersionOption: '1.11'
-        tasks: 'test'
+  # - job: UnitTests
+  #   #dependsOn: LintAnalysis
+  #   steps:
+  #   - task: Gradle@2
+  #     inputs:
+  #       workingDirectory: ''
+  #       gradleWrapperFile: 'gradlew'
+  #       gradleOptions: '-Xmx3072m'
+  #       publishJUnitResults: true
+  #       testResultsFiles: '**/TEST-*.xml'
+  #       javaHomeOption: 'JDKVersion'
+  #       jdkVersionOption: '1.11'
+  #       tasks: 'test'
   - job: Package
-    dependsOn: UnitTests
+    #dependsOn: UnitTests
     steps:
     - task: Gradle@2
       inputs:
@@ -65,25 +65,25 @@ stages:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'drop'
         publishLocation: Container
-- stage: "ContineousDelivery"
-  jobs: 
-   - job: "Release"
-     steps:
-     - task: DownloadPipelineArtifact@2
-       inputs:
-        itemPattern: '**/app-debug.apk'
-        targetPath: '$(Pipeline.Workspace)'
-        buildType: 'current'  
-     - task: AppCenterDistribute@3
-       inputs:
-        serverEndpoint: 'SMF-Android'
-        symbolsOption: 'Android'
-        #appSlug: 'https://appcenter.ms/orgs/BPMLinks/apps/SMF-Android-Dev'
-        appSlug: 'BPMLinks/SMF-Android-Dev'
-        appFile: '$(Pipeline.Workspace)/drop/app/build/outputs/apk/debug/app-debug.apk'
-        releaseNotesOption: 'input'
-        releaseNotesInput: 'Release_$(Build.BuildNumber)'
-        destinationType: 'groups' 
+# - stage: "ContineousDelivery"
+#   jobs: 
+#    - job: "Release"
+#      steps:
+#      - task: DownloadPipelineArtifact@2
+#        inputs:
+#         itemPattern: '**/app-debug.apk'
+#         targetPath: '$(Pipeline.Workspace)'
+#         buildType: 'current'  
+#      - task: AppCenterDistribute@3
+#        inputs:
+#         serverEndpoint: 'SMF-Android'
+#         symbolsOption: 'Android'
+#         #appSlug: 'https://appcenter.ms/orgs/BPMLinks/apps/SMF-Android-Dev'
+#         appSlug: 'BPMLinks/SMF-Android-Dev'
+#         appFile: '$(Pipeline.Workspace)/drop/app/build/outputs/apk/debug/app-debug.apk'
+#         releaseNotesOption: 'input'
+#         releaseNotesInput: 'Release_$(Build.BuildNumber)'
+#         destinationType: 'groups' 
 
            
            
