Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,6 +60,13 @@ stages:
         Contents: '**/*.apk'
         TargetFolder: '$(build.artifactstagingdirectory)'
         OverWrite: true  
+    - task: AndroidSigning@3
+      inputs:
+         apkFiles: '**/*.apk'
+         apksignerKeystorePassword: 'smfandroid'
+         apksignerKeystoreAlias: 'smfandroid'
+         apksignerKeyPassword: 'smfandroid'
+         keystoreFile: "smfandroid.jks"
     - task: PublishBuildArtifacts@1
       inputs:
         PathtoPublish: '$(Build.ArtifactStagingDirectory)'
