TASK 2528 - Calendar and Toggle Button Functionality
-Added Logics for Hiding the previous month from current month
-Added Logics for Hiding the previous date from current Date
-Added Toggle Button
-Added selecting of days by weeks
-Added Calendar Utils .

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,11 @@ plugins {
 
 android {
     compileSdk 31
-
     defaultConfig {
         configurations.all {
             resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
-
-
         }
+        vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         applicationId "com.smf.events"
         minSdk 17
