Task 2847 Creating a build_Variants_for dev,qa,uat & prod
- Created Build Variable flavour for dev,qa,uat &prod build.gradle
- Added firebase json indiviual file for the four build
- Made the dimension changes for button in splash_screen_fragment.xml
- Made changes in DeselectingDialogFragment.kt for giving the wrap content for dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:roundIcon="@mipmap/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.ServiceManagment">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="api_key" />
         <activity android:name="com.smf.events.ui.schedulemanagement.ScheduleManagementActivity" />
         <activity
             android:name=".MainActivity"
