--- a/app/build.gradle
+++ b/app/build.gradle
@@ -195,4 +195,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // To auto-generate google map api key of google-services.json
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 }
