--- a/app/build.gradle
+++ b/app/build.gradle
@@ -199,4 +199,9 @@ dependencies {
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+    // sdp screen resolution
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+
+
 }
