--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'com.google.gms.google-services'
+    // Apply the Crashlytics Gradle plugin
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -18,8 +20,8 @@ android {
         applicationId "com.smf.events"
         minSdk 19
         targetSdk 31
-        versionCode 8
-        versionName "1.08"
+        versionCode 9
+        versionName "1.09"
         buildConfigField "String", "base_url", "\"https://uat1.festocloud.com/\""
         buildConfigField "String", "apiType",  "\"festo-\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -46,14 +48,14 @@ android {
             applicationIdSuffix".uat"
             buildConfigField "String", "base_url", "\"https://uat1.festocloud.com/\""
             buildConfigField "String", "apiType",  "\"festo-\""
-           }
+        }
 
         prod {
             dimension "festo"
             applicationIdSuffix""
             buildConfigField "String", "base_url", "\"https://uat1.festocloud.com/\""
             buildConfigField "String", "apiType",  "\"festo-\""
-          }
+        }
     }
     buildTypes {
         release {
@@ -193,6 +195,7 @@ dependencies {
     // FireBase
     implementation platform('com.google.firebase:firebase-bom:30.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
     // To auto-generate google map api key of google-services.json
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
@@ -202,6 +205,4 @@ dependencies {
 
     // sdp screen resolution
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
-
-
 }
