--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="api_key" />
+
         <activity android:name="com.smf.events.ui.schedulemanagement.ScheduleManagementActivity" />
         <activity
             android:name=".MainActivity"
@@ -32,6 +33,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.notification.NotificationActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
