--- a/app/build.gradle
+++ b/app/build.gradle
@@ -205,4 +205,14 @@ dependencies {
 
     // sdp screen resolution
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+
+
+    //firebase
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.7'
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    //Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
 }
