--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,16 +11,13 @@ plugins {
 
 android {
     useLibrary 'android.test.mock'
-    compileSdk 32
+    compileSdk 33
     defaultConfig {
-        configurations.all {
-            resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
-        }
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         applicationId "com.smf.events"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 9
         versionName "1.09"
         buildConfigField "String", "base_url", "\"https://uat1.festocloud.com/\""
@@ -110,7 +107,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
     // for check lint
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.0"
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
@@ -226,6 +223,8 @@ dependencies {
 
     // sdp screen resolution
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    // ssp screen resolution
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
     //firebase
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.7'
