--- a/app/build.gradle
+++ b/app/build.gradle
@@ -246,4 +246,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.json:json:20160810'
+    // For load images on imageview
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
