--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,11 +86,11 @@ android {
 }
 
 // execute tests before realising a prod apk
-//tasks.whenTaskAdded { task ->
-////    if (task.name == 'assembleProdRelease' || task.name == 'bundleProdRelease') {
-////        task.dependsOn('test')
-////    }
-//}
+tasks.whenTaskAdded { task ->
+    if (task.name == 'assembleProdRelease' || task.name == 'bundleProdRelease') {
+        task.dependsOn('test')
+    }
+}
 
 
 tasks.whenTaskAdded { task ->
