--- a/app/build.gradle
+++ b/app/build.gradle
@@ -246,6 +246,10 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.json:json:20160810'
+    // Mock web server
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+    // Google truth for assertion
+    testImplementation "com.google.truth:truth:1.1.3"
     // For load images on imageview
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
